--- a/spotify_backend/package.json
+++ b/spotify_backend/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rince Mathew",
   "license": "ISC",
-  "description": ""
+  "description": "This is backend of spotify clone",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
