--- a/spotify_backend/package.json
+++ b/spotify_backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "This is backend of spotify clone",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3"
