--- a/spotify_frontend/package.json
+++ b/spotify_frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "cloudinary-core": "^2.13.1",
     "cloudinary-react": "^1.8.1",
+    "howler": "^2.2.4",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
